<resources>
    <string name="app_name">Android Sudoku</string>

    <string name="timer">%02d:%02d.%02d</string>
    <string name="completed">Puzzle completed</string>

    <string name="set_1">1</string>
    <string name="set_2">2</string>
    <string name="set_3">3</string>
    <string name="set_4">4</string>
    <string name="set_5">5</string>
    <string name="set_6">6</string>
    <string name="set_7">7</string>
    <string name="set_8">8</string>
    <string name="set_9">9</string>
    <string name="clear">C</string>

    <string name="easy">Generate puzzle with 40 clues</string>
    <string name="medium">Generate puzzle with 36 clues</string>
    <string name="hard">Generate puzzle with 32 clues</string>
    <string name="very_hard">Generate puzzle with 28 clues</string>
    <string name="difficulty">Choose difficulty</string>

    <string name="hints">Toggle hints</string>
    <string name="highlight">Toggle highlighting</string>
    <string name="save">Save</string>

    <string name="start">Start game</string>
    <string name="settings">Settings</string>
</resources>
