<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".activities.SelectionActivity"
              android:orientation="vertical">

    <Button android:id="@+id/easy"
            android:text="@string/easy"
            android:onClick="puzzleSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button android:id="@+id/medium"
            android:text="@string/medium"
            android:onClick="puzzleSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button android:id="@+id/hard"
            android:text="@string/hard"
            android:onClick="puzzleSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button android:id="@+id/very_hard"
            android:text="@string/very_hard"
            android:onClick="puzzleSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>